# TIL

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: TIL_COMPILER_REFERENCE.md  TIL_INSTALLATION_GUIDE.md  TIL_LANGUAGE_REFERENCE.md  WHY_TIL_IS_A_REAL_LANGUAGE.md
editors/sublime/: TIL.sublime-syntax
editors/vim/: til.vim
editors/vscode/: .vscodeignore  .vsixignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/snippets/: til.json
editors/vscode/src/: extension.js
editors/vscode/syntaxes/: til.tmLanguage.json
examples/: 01_hello.til  02_variables.til  03_functions.til  04_structs.til  05_control_flow.til  06_enums.til  07_multilevel.til  08_imports.til  math_utils.til
examples/advanced/: structs.til
examples/basic/: control_flow.til  functions.til  hello.til  variables.til
examples/kazakh/: salam.til
examples/multilevel/: multilevel.til
ide/: README.md  TIL-IDE.spec  til-ide.bat  til-ide.sh  til_ide.py
lsp/: til_lsp.py
src/: til.py
stdlib/: math.til  strings.til
tests/: test_basic.til  test_compiler.py
til_compiler/: __init__.py  cli.py
website/: index.html  install.ps1  install.sh  vercel.json
