[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "til-compiler"
version = "2.0.0"
description = "TIL (The Intelligent Language) — Simpler than Python. Faster than C. Smarter than all."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Alisher Beisembekov"}
]
keywords = ["compiler", "programming-language", "til", "multilevel", "kazakh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/damn-glitch/TIL"
Repository = "https://github.com/damn-glitch/TIL"
Issues = "https://github.com/damn-glitch/TIL/issues"

[project.scripts]
til = "til_compiler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["til_compiler*"]

[tool.setuptools.package-data]
til_compiler = ["*.py"]
